src/elsi.h

void c_elsi_set_output_log(elsi_handle handle_c,
                           int output_log);
void c_elsi_set_sips_slice_type(elsi_handle handle_c,
                                int slice_type);
void c_elsi_set_sips_buffer(elsi_handle handle_c,
                            double buffer);
void c_elsi_set_sips_inertia_tol(elsi_handle handle_c,
                                 double inertia_tol);
void c_elsi_set_sips_interval(elsi_handle handle_c,
                              double lower,
                              double upper);
void c_elsi_set_ntpoly_method(elsi_handle handle_c,
                              int method);
void c_elsi_set_ntpoly_isr(elsi_handle handle_c,
                           int isr);
void c_elsi_set_ntpoly_tol(elsi_handle handle_c,
                           double tol);
void c_elsi_set_ntpoly_filter(elsi_handle handle_c,
                              double filter);
void c_elsi_set_ntpoly_max_iter(elsi_handle handle_c,
                                int max_iter);
void c_elsi_set_mu_broaden_scheme(elsi_handle handle_c,
                                  int broaden_scheme);
void c_elsi_set_mu_broaden_width(elsi_handle handle_c,
                                 double broaden_width);
void c_elsi_set_mu_tol(elsi_handle handle_c,
                       double tol);
void c_elsi_set_mu_spin_degen(elsi_handle handle_c,
                              double spin_degen);
void c_elsi_set_mu_mp_order(elsi_handle handle_c,
                            int mp_order);
void c_elsi_get_initialized(elsi_handle handle_c,
                            int *initialized);
void c_elsi_get_version(int *major,
                        int *minor,
                        int *patch);
void c_elsi_get_datestamp(int *datestamp);
void c_elsi_get_n_sing(elsi_handle handle_c,
                       int *n_sing);
void c_elsi_get_pexsi_mu_min(elsi_handle handle_c,
                             double *mu_min);
void c_elsi_get_pexsi_mu_max(elsi_handle handle_c,
                             double *mu_max);
void c_elsi_get_mu(elsi_handle handle_c,
                   double *mu);
void c_elsi_get_edm_real(elsi_handle handle_c,
                         double *edm);
void c_elsi_get_edm_complex(elsi_handle handle_c,
                            double _Complex *edm);
void c_elsi_get_edm_real_sparse(elsi_handle handle_c,
                                double *edm);
void c_elsi_get_edm_complex_sparse(elsi_handle handle_c,
                                   double _Complex *edm);
void c_elsi_init_rw(elsi_rw_handle *handle_c,
                    int rw_task,
                    int parallel_mode,
                    int n_basis,
                    double n_electron);
void c_elsi_set_rw_mpi(elsi_rw_handle handle_c,
                       MPI_Fint mpi_comm);
void c_elsi_set_rw_blacs(elsi_rw_handle handle_c,
                         int blacs_ctxt,
                         int block_size);
void c_elsi_set_rw_csc(elsi_rw_handle handle_c,
                       int nnz,
                       int nnz_l,
                       int n_lcol);