src/elsi_c_interface.f90


end subroutine

subroutine elsi_set_sips_slice_type_c_wrapper(handle_c,slice_type)&
   bind(C,name="c_elsi_set_sips_slice_type")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: slice_type

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_slice_type(handle_f,slice_type)

end subroutine

subroutine elsi_set_sips_buffer_c_wrapper(handle_c,buffer)&
   bind(C,name="c_elsi_set_sips_buffer")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: buffer

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_buffer(handle_f,buffer)

end subroutine

subroutine elsi_set_sips_inertia_tol_c_wrapper(handle_c,inertia_tol)&
   bind(C,name="c_elsi_set_sips_inertia_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: inertia_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_inertia_tol(handle_f,inertia_tol)

end subroutine

subroutine elsi_set_sips_interval_c_wrapper(handle_c,lower,upper)&
   bind(C,name="c_elsi_set_sips_interval")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: lower
   real(kind=c_double), value, intent(in) :: upper

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_sips_interval(handle_f,lower,upper)

end subroutine

subroutine elsi_set_ntpoly_method_c_wrapper(handle_c,nt_method)&
   bind(C,name="c_elsi_set_ntpoly_method")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: nt_method

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_ntpoly_method(handle_f,nt_method)

end subroutine

subroutine elsi_set_ntpoly_isr_c_wrapper(handle_c,nt_isr)&
   bind(C,name="c_elsi_set_ntpoly_isr")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: nt_isr

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_ntpoly_isr(handle_f,nt_isr)

end subroutine

subroutine elsi_set_ntpoly_tol_c_wrapper(handle_c,nt_tol)&
   bind(C,name="c_elsi_set_ntpoly_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: nt_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_ntpoly_tol(handle_f,nt_tol)

end subroutine

subroutine elsi_set_ntpoly_filter_c_wrapper(handle_c,filter)&
   bind(C,name="c_elsi_set_ntpoly_filter")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: filter

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_ntpoly_filter(handle_f,filter)

end subroutine

subroutine elsi_set_ntpoly_max_iter_c_wrapper(handle_c,max_iter)&
   bind(C,name="c_elsi_set_ntpoly_max_iter")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: max_iter

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_ntpoly_max_iter(handle_f,max_iter)

end subroutine

subroutine elsi_set_mu_broaden_scheme_c_wrapper(handle_c,broaden_scheme)&
   bind(C,name="c_elsi_set_mu_broaden_scheme")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: broaden_scheme

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_mu_broaden_scheme(handle_f,broaden_scheme)

end subroutine

subroutine elsi_set_mu_broaden_width_c_wrapper(handle_c,broaden_width)&
   bind(C,name="c_elsi_set_mu_broaden_width")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: broaden_width

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_mu_broaden_width(handle_f,broaden_width)

end subroutine

subroutine elsi_set_mu_tol_c_wrapper(handle_c,mu_tol)&
   bind(C,name="c_elsi_set_mu_tol")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: mu_tol

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_mu_tol(handle_f,mu_tol)

end subroutine

subroutine elsi_set_mu_spin_degen_c_wrapper(handle_c,spin_degen)&
   bind(C,name="c_elsi_set_mu_spin_degen")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), value, intent(in) :: spin_degen

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_mu_spin_degen(handle_f,spin_degen)

end subroutine

subroutine elsi_set_mu_mp_order_c_wrapper(handle_c,mp_order)&
   bind(C,name="c_elsi_set_mu_mp_order")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: mp_order

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_mu_mp_order(handle_f,mp_order)

end subroutine

subroutine elsi_set_output_log_c_wrapper(handle_c,out_log)&
   bind(C,name="c_elsi_set_output_log")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: out_log

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_output_log(handle_f,out_log)

end subroutine

subroutine elsi_get_pexsi_mu_min_c_wrapper(handle_c,mu_min)&
   bind(C,name="c_elsi_get_pexsi_mu_min")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), intent(out) :: mu_min

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_get_pexsi_mu_min(handle_f,mu_min)

end subroutine

subroutine elsi_get_pexsi_mu_max_c_wrapper(handle_c,mu_max)&
   bind(C,name="c_elsi_get_pexsi_mu_max")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), intent(out) :: mu_max

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_get_pexsi_mu_max(handle_f,mu_max)

end subroutine

subroutine elsi_get_initialized_c_wrapper(handle_c,handle_init)&
   bind(C,name="c_elsi_get_initialized")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), intent(out) :: handle_init

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_get_initialized(handle_f,handle_init)

end subroutine

subroutine elsi_get_version_c_wrapper(major,minor,patch)&
   bind(C,name="c_elsi_get_version")

   implicit none

   integer(kind=c_int), intent(out) :: major
   integer(kind=c_int), intent(out) :: minor
   integer(kind=c_int), intent(out) :: patch

   call elsi_get_version(major,minor,patch)

end subroutine

subroutine elsi_get_datestamp_c_wrapper(datestamp)&
   bind(C,name="c_elsi_get_datestamp")

   implicit none

   integer(kind=c_int), intent(out) :: datestamp

   call elsi_get_datestamp(datestamp)

end subroutine

subroutine elsi_get_n_sing_c_wrapper(handle_c,n_sing)&
   bind(C,name="c_elsi_get_n_sing")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), intent(out) :: n_sing

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_get_n_sing(handle_f,n_sing)

end subroutine

subroutine elsi_get_mu_c_wrapper(handle_c,mu)&
   bind(C,name="c_elsi_get_mu")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   real(kind=c_double), intent(out) :: mu

   type(elsi_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_get_mu(handle_f,mu)

end subroutine

subroutine elsi_get_edm_real_c_wrapper(handle_c,edm_c)&
   bind(C,name="c_elsi_get_edm_real")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: edm_c

   type(elsi_handle), pointer :: handle_f
   real(kind=c_double), pointer :: edm_f(:,:)

   integer(kind=c_int) :: lrow
   integer(kind=c_int) :: lcol

   call c_f_pointer(handle_c,handle_f)

   lrow = handle_f%bh%n_lrow
   lcol = handle_f%bh%n_lcol

   call c_f_pointer(edm_c,edm_f,shape=[lrow,lcol])

   call elsi_get_edm_real(handle_f,edm_f)

end subroutine

subroutine elsi_get_edm_complex_c_wrapper(handle_c,edm_c)&
   bind(C,name="c_elsi_get_edm_complex")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: edm_c

   type(elsi_handle), pointer :: handle_f
   complex(kind=c_double), pointer :: edm_f(:,:)

   integer(kind=c_int) :: lrow
   integer(kind=c_int) :: lcol

   call c_f_pointer(handle_c,handle_f)

   lrow = handle_f%bh%n_lrow
   lcol = handle_f%bh%n_lcol

   call c_f_pointer(edm_c,edm_f,shape=[lrow,lcol])

   call elsi_get_edm_complex(handle_f,edm_f)

end subroutine

subroutine elsi_get_edm_real_sparse_c_wrapper(handle_c,edm_c)&
   bind(C,name="c_elsi_get_edm_real_sparse")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: edm_c

   type(elsi_handle), pointer :: handle_f
   real(kind=c_double), pointer :: edm_f(:)

   integer(kind=c_int) :: nnz_l

   call c_f_pointer(handle_c,handle_f)

   nnz_l = handle_f%bh%nnz_l_sp

   call c_f_pointer(edm_c,edm_f,shape=[nnz_l])

   call elsi_get_edm_real_sparse(handle_f,edm_f)

end subroutine

subroutine elsi_get_edm_complex_sparse_c_wrapper(handle_c,edm_c)&
   bind(C,name="c_elsi_get_edm_complex_sparse")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   type(c_ptr), value, intent(in) :: edm_c

   type(elsi_handle), pointer :: handle_f
   complex(kind=c_double), pointer :: edm_f(:)

   integer(kind=c_int) :: nnz_l

   call c_f_pointer(handle_c,handle_f)

   nnz_l = handle_f%bh%nnz_l_sp

   call c_f_pointer(edm_c,edm_f,shape=[nnz_l])

   call elsi_get_edm_complex_sparse(handle_f,edm_f)

end subroutine

subroutine elsi_init_rw_c_wrapper(handle_c,rw_task,parallel_mode,n_basis,&
              n_electron)&
   bind(C,name="c_elsi_init_rw")

   implicit none

   type(c_ptr) :: handle_c
   integer(kind=c_int), value, intent(in) :: rw_task
   integer(kind=c_int), value, intent(in) :: parallel_mode
   integer(kind=c_int), value, intent(in) :: n_basis
   real(kind=c_double), value, intent(in) :: n_electron

   type(elsi_rw_handle), pointer :: handle_f

   allocate(handle_f)

   call elsi_init_rw(handle_f,rw_task,parallel_mode,n_basis,n_electron)

   handle_c = c_loc(handle_f)

end subroutine

subroutine elsi_set_rw_mpi_c_wrapper(handle_c,mpi_comm)&
   bind(C,name="c_elsi_set_rw_mpi")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: mpi_comm

   type(elsi_rw_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_rw_mpi(handle_f,mpi_comm)

end subroutine

subroutine elsi_set_rw_blacs_c_wrapper(handle_c,blacs_ctxt,block_size)&
   bind(C,name="c_elsi_set_rw_blacs")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: blacs_ctxt
   integer(kind=c_int), value, intent(in) :: block_size

   type(elsi_rw_handle), pointer :: handle_f

   call c_f_pointer(handle_c,handle_f)

   call elsi_set_rw_blacs(handle_f,blacs_ctxt,block_size)

end subroutine

subroutine elsi_set_rw_csc_c_wrapper(handle_c,nnz_g,nnz_l,n_lcol)&
   bind(C,name="c_elsi_set_rw_csc")

   implicit none

   type(c_ptr), value, intent(in) :: handle_c
   integer(kind=c_int), value, intent(in) :: nnz_g
   integer(kind=c_int), value, intent(in) :: nnz_l
   integer(kind=c_int), value, intent(in) :: n_lcol

   type(elsi_rw_handle), pointer :: handle_f
